--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
         <a href="/" class="header__logo">  UROMA  </a>
       
 
-      <a class="header__menu">
+      <a class="header__menu hide-for-desktop">
         <span></span>
         <span></span>
         <span></span>
       </a>
 
 
-      <div class="header__links">
+      <div class="header__links hide-for-mobile">
         <a href="">Home</a>
         <a href="">About</a>
         <a href="">Services</a>
