--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
       </div>
 
-      <button type="button">Contact Us</button>
+      <button type="button" class=".hide-for-mobile">Contact Us</button>
       </nav>
     </header>
 
