--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a href="/" class="header__logo">  UROMA  </a>
       
 
-      <a class="header__menu hide-for-desktop">
+      <a class="header__menu  hide-for-desktop">
         <span></span>
         <span></span>
         <span></span>
@@ -31,7 +31,7 @@
 
       </div>
 
-      <button type="button" class=".hide-for-mobile">Contact Us</button>
+      <button type="button" class="hide-for-mobile">Contact Us</button>
       </nav>
     </header>
 
