Presently working on the mobile view navlist and animated hambugger

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
 </head>
 <body>
     <header class="header">
-      
+      <div class="overlay">
+
+      </div>
       <nav class="flex flex-jc-sb flex-ai-c">
         <a href="/" class="header__logo">  UROMA  </a>
       
 
-      <a class="header__menu  hide-for-desktop">
+      <a class="header__menu  hide-for-desktop" id="hamBtn">
         <span></span>
         <span></span>
         <span></span>
@@ -35,7 +37,10 @@
       </nav>
     </header>
 
-
+Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur obcaecati magnam aliquid. Aliquid qui numquam perferendis distinctio corporis! Pariatur ratione explicabo suscipit earum dolore. Voluptatem cum expedita saepe maiores! Voluptatem!
+Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea asperiores doloribus provident voluptas laboriosam possimus corrupti aperiam commodi, id, laudantium eos vero minima, rerum repellat pariatur sint est sit temporibus?
+Lorem ipsum dolor, sit amet consectetur adipisicing elit. Unde eos vel inventore deserunt earum dolor assumenda hic ex reprehenderit numquam neque quasi quae quidem quisquam, adipisci cupiditate. Nihil, laudantium porro.
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur laborum aperiam ullam possimus asperiores atque, praesentium corrupti a quas iure nobis ducimus, assumenda vel soluta necessitatibus doloremque id odio placeat.
     <script src="app/js/app.js"></script>
 </body>
 </html>
