in programming everything might not go as planned, but you must be able to twerk it out and make the best of the situation

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       <div class="overlay">
 
       </div>
-      <nav class="flex flex-jc-sb flex-ai-c">
+      <nav class="flex container flex-jc-sb flex-ai-c">
         <a href="/" class="header__logo">  UROMA  </a>
       
 
-      <a class="header__menu  hide-for-desktop" id="hamBtn">
+      <a class="header__toggle  hide-for-desktop" id="hamBtn">
         <span></span>
         <span></span>
         <span></span>
@@ -35,6 +35,15 @@
 
       <button type="button" class="hide-for-mobile">Contact Us</button>
       </nav>
+
+
+      <div class="header__menu  ">
+        <a href="">Home</a>
+        <a href="">About</a>
+        <a href="">Services</a>
+        <a href="">Blog</a>
+        
+      </div>
     </header>
 
 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur obcaecati magnam aliquid. Aliquid qui numquam perferendis distinctio corporis! Pariatur ratione explicabo suscipit earum dolore. Voluptatem cum expedita saepe maiores! Voluptatem!
