--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header class="header">
-      <div class="overlay">
+      <div class="overlay has-fade">
 
       </div>
       <nav class="flex container flex-jc-sb flex-ai-c">
@@ -37,7 +37,7 @@
       </nav>
 
 
-      <div class="header__menu  ">
+      <div class="header__menu has-fade ">
         <a href="">Home</a>
         <a href="">About</a>
         <a href="">Services</a>
