--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       </div>
 
-      <button type="button" class="hide-for-mobile">Contact Us</button>
+      <button type="button"  class=" contact hide-for-mobile">Contact Us</button>
       </nav>
 
 
@@ -45,6 +45,22 @@
         
       </div>
     </header>
+
+
+    <section class="hero">
+        <div class="hero__img container">
+            
+        </div>
+
+        <div class="hero__text container                                                        ">
+            <h1>Experienced  <span> mobile and web  </span> applications and website builders measuring.</h1>
+            <p>KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web applications and website builders measuring dozens of completed projects. We build and develop mobile applications for several top platforms, including Android  & IOS. </p>
+
+
+            <button class="contact" type="button">Contact us</button>
+            <button class="view">View More</button>
+        </div>
+    </section>
 
 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur obcaecati magnam aliquid. Aliquid qui numquam perferendis distinctio corporis! Pariatur ratione explicabo suscipit earum dolore. Voluptatem cum expedita saepe maiores! Voluptatem!
 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ea asperiores doloribus provident voluptas laboriosam possimus corrupti aperiam commodi, id, laudantium eos vero minima, rerum repellat pariatur sint est sit temporibus?
