made a change to the title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Uroma Landing Page</title>
+    <title>Uromi Landing Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
 
       </div>
       <nav class="flex container flex-jc-sb flex-ai-c">
-        <a href="/" class="header__logo">  UROMA  </a>
+        <a href="/" class="header__logo">  UROMI  </a>
       
 
       <a class="header__toggle  hide-for-desktop" id="hamBtn">
