thoughts bt blockchain tech

--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
 </section>
 
 
+<h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. A et illum fugiat corporis blanditiis optio nisi officia earum perspiciatis error. Quia qui dolor fuga quam itaque repudiandae animi. Non, cumque.</h2>
+
+
 
 
 
