i am done with the phase section. Real progess is being made

--- a/index.html
+++ b/index.html
@@ -85,27 +85,24 @@
 
     <div class="phase__Hero"    >
         <div class="phase__img">
-                <img src="/assets/Activities.png">
+                <img src="/assets/website-mockup-png-10 1.png">
         </div>
-        <div class="phase__text">
-            <h1>Experienced  mobile and web   applications and website builders measuring.</h1>
-            <button class="view">View More</button>
+        <div class="phase__text pahse__1st">
+            <h1><span>Lorem Ipsum</span>  is simply dummy text of the printing. </h1>
             <p>KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web applications and website builders measuring dozens of completed projects. We build and develop mobile applications for several top platforms, including Android  & IOS. </p>
         </div>
     </div>
 
-    <div class="phase__Hero"    >
-        <div class="phase__text">
+    <!-- <div class="phase__Hero"    >
+        <div class="phase__text phase__2nd">
             <h1>Experienced  mobile and web   applications and website builders measuring.</h1>
             <button class="view">View More</button>
             <p>KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web applications and website builders measuring dozens of completed projects. We build and develop mobile applications for several top platforms, including Android  & IOS. </p>
         </div>
-
-
         <div class="phase__img">
-            <img src="/assets/Activities.png">
+            <img src="/assets/website-mockup-png-10 1.png">
     </div>
-    </div>
+    </div> -->
 
 </div>
     
