added the brand section

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                     </div>
                     <div class="phase__img">
                         <img src="/assets/website-mockup-png-10 1.png">
-                </div>
+              </div>
                 </div>
 
                 <!-- <div class="phase__Hero">
@@ -102,8 +102,38 @@
 
             </div>
     
-    
+    <!-- Cards -->
+            <div class="Card container">
+              <div class="Card__rect  ">
+                <h4>Lorem Ipsum is simply dummy text.</h4>
+                <p>KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web applications and website builders measuring dozens of completed projects. We build and develop mobile applications for several top platforms, including Android  & IOS. </p>
+                <button type="button" class="contact">View More</button>
+              </div>
+              <div class="Card__rect  Card__rect1">
+                <h4>Lorem Ipsum is simply dummy text.</h4>
+                <p>KODEX TECHNOLOGY (PVT) LTD is a team of experienced mobile and web applications and website builders measuring dozens of completed projects. We build and develop mobile applications for several top platforms, including Android  & IOS. </p>
+                <button type="button" class="view">View More</button>
+              </div>
+            </div>
 
+
+            <div class="frame">
+              <div class="frame__text">
+                <h6>You will be in good Company</h6>
+              </div>
+
+              <div class="frame__logos">
+                <div class="frame__logo">
+                  <img>
+                </div>
+                <div class="frame__logo"> 
+                  <img>
+                </div>
+                <div class="frame__logo">
+                  <img>
+                </div>
+              </div>
+            </div>
 
 </section>
 
