added the  section

--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
 
       <!-- Mobile Nav -->
       <div class="header__links hide-for-mobile">
-        <a href="">Home</a>
-        <a href="">About</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
         <a href="">Services</a>
         <a href="">Blog</a>
 
       </div>
       <!-- Desktop Button -->
-      <button type="button"  class=" contact hide-for-mobile">Contact Us</button>
+      <button type="button"  class="contact hide-for-mobile">Contact Us</button>
       </nav>
 
 <!-- Desktop Navigation List -->
       <div class="header__menu has-fade ">
-        <a href="">Home</a>
+        <a href="index.html">Home</a>
         <a href="">About</a>
         <a href="">Services</a>
         <a href="">Blog</a>
@@ -124,17 +124,35 @@
 
               <div class="frame__logos">
                 <div class="frame__logo">
-                  <img>
+                  <img src="/assets/beneoshop.png">
                 </div>
                 <div class="frame__logo"> 
-                  <img>
+                  <img src="/assets//caspio.png">
                 </div>
                 <div class="frame__logo">
-                  <img>
+                  <img src="/assets/HyperGrid.png">
+                </div>
+                <div class="frame__logo">
+                  <img src="/assets/leotrippi.png">
                 </div>
               </div>
             </div>
 
+            <div class="subscribe">
+              <div class="subscribe__text">
+                <h4>Lorem Ipsum is simply dummy text of the printing. </h4>
+              </div>
+
+              <div class="subscribe__form">
+                <input type="email" placeholder="Enter your Email" id="email">
+                <button type="button" class="subscribe__btn" >Subscribe</button>
+              </div>
+            </div>
+
+
+            <div class="footer">
+
+            </div>
 </section>
 
 
